# Siemens-5g-diploma

./: README.md  WorkShop2.asv  WorkShop2.m  WorkShop2.txt  workshop1.cpp
finalProject/: CMakeLists.txt  README.md  a.out  main.cpp  second_milstone.txt
finalProject/CRC/: CRC.cpp  CRC.hpp
finalProject/Client/: CMakeLists.txt  a.out  main.cpp
finalProject/Client/parser/: ORAN.cpp  ORAN.hpp  a.out  parser.cpp  parser.hpp  parserConfig.txt  try.cpp
finalProject/Client/socket_handler/: socket_handler.cpp
finalProject/ECPRI/: ECPRI.cpp  ECPRI.hpp
finalProject/Ethernet/: CMakeCache.txt  Ethernet.cpp  Ethernet.hpp  EthernetApp  EthernetConfig.txt  Makefile  cmake_install.cmake
finalProject/ORAN/: ORAN.cpp  ORAN.hpp  a.out  try.cpp
finalProject/generator/: CMakeLists.txt  main.cpp
finalProject/generator/CRC/: CRC.cpp  CRC.hpp
finalProject/generator/ECPRI/: ECPRI.cpp  ECPRI.hpp
finalProject/generator/Ethernet/: Ethernet.cpp  Ethernet.hpp
finalProject/generator/ORAN/: ORAN.cpp  ORAN.hpp
finalProject/generator/socket_handler/: socket_handler.hpp
finalProject/reciever/: CMakeLists.txt  main.cpp
finalProject/reciever/CRC/: CRC.hpp
finalProject/reciever/ORAN/: ORAN.hpp
finalProject/reciever/parser/: parser.cpp  parser.hpp  parserConfig.txt
